packages/core/src/tooltip/Tooltip.css
.uitk-density-touch {
  --tooltip-icon-top: 6px;
}

.uitk-density-low {
  --tooltip-icon-top: 4px;
}

.uitk-density-medium {
  --tooltip-icon-top: 1px;
}

.uitk-density-high {
  --tooltip-icon-top: 1px;
}

/* Styles applied to root component */
.uitkTooltip {
  --tooltip-background: var(--uitkTooltip-background, var(--uitk-container-background-medium));
  --tooltip-fontSize: var(--uitkTooltip-fontSize, var(--uitk-text-fontSize));
  --tooltip-lineHeight: var(--uitkTooltip-lineHeight, var(--uitk-text-lineHeight));
}

.uitkTooltip {
  background: var(--tooltip-background);
  border-color: var(--uitkTooltip-borderColor, var(--tooltip-status-borderColor));
  border-width: var(--uitkTooltip-borderWidth, var(--uitk-container-borderWidth));
  border-style: var(--uitkTooltip-borderStyle, var(--uitk-container-borderStyle));
  box-shadow: var(--uitkTooltip-shadow, var(--uitk-overlayable-shadow-popout));
  color: var(--uitkTooltip-text-color, var(--uitk-text-primary-foreground));
  font-size: var(--tooltip-fontSize);
  line-height: var(--tooltip-lineHeight);
  max-width: var(--uitkTooltip-maxWidth, 230px);
  padding: var(--uitkTooltip-padding, var(--uitk-size-unit));
  position: relative;
  text-align: var(--uitkTooltip-textAlign, left);
}

.uitkTooltip[data-placement^="top"] {
  transform-origin: bottom;
}

.uitkTooltip[data-placement^="bottom"] {
  transform-origin: top;
}

.uitkTooltip[data-placement^="left"] {
  transform-origin: right;
}

.uitkTooltip[data-placement^="right"] {
  transform-origin: left;
}

/* Styles applied to inner content */
.uitkTooltip-content {
  display: flex;
  position: relative;
}

/* Styles applied to body */
.uitkTooltip-body {
  overflow: hidden;
}

/* Styles applied to status icon */
.uitkTooltip-icon {
  color: var(--uitkTooltip-icon-color, var(--tooltip-status-icon-color));
  fill: var(--uitkTooltip-icon-color, var(--tooltip-status-icon-color));
  margin-right: var(--uitkTooltip-icon-marginRight, 6px);
  top: var(--tooltip-icon-top);
  vertical-align: top;
}

/* Styles applied to Tooltip arrow */
.uitkTooltip-arrow,
.uitkTooltip-arrow::after {
  border: var(--uitk-size-sharktooth-height) solid transparent;
  position: absolute;
}

.uitkTooltip-arrow::after {
  content: "";
}

.uitkTooltip[data-placement^="top"] .uitkTooltip-arrow {
  border-top-color: var(--tooltip-status-borderColor);
  bottom: -11px;
}

.uitkTooltip[data-placement^="bottom"] .uitkTooltip-arrow {
  border-bottom-color: var(--tooltip-status-borderColor);
  top: -11px;
}

.uitkTooltip[data-placement^="left"] .uitkTooltip-arrow {
  border-left-color: var(--tooltip-status-borderColor);
  right: -11px;
}

.uitkTooltip[data-placement^="right"] .uitkTooltip-arrow {
  border-right-color: var(--tooltip-status-borderColor);
  left: -11px;
}

.uitkTooltip[data-placement^="top"] .uitkTooltip-arrow::after {
  border-top-color: var(--tooltip-background);
  bottom: -4px;
  left: calc(100% - var(--uitk-size-sharktooth-height));
}

.uitkTooltip[data-placement^="bottom"] .uitkTooltip-arrow::after {
  border-bottom-color: var(--tooltip-background);
  top: -4px;
  left: calc(100% - var(--uitk-size-sharktooth-height));
}

.uitkTooltip[data-placement^="left"] .uitkTooltip-arrow::after {
  border-left-color: var(--tooltip-background);
  right: -4px;
  top: calc(100% - var(--uitk-size-sharktooth-height));
}

.uitkTooltip[data-placement^="right"] .uitkTooltip-arrow::after {
  border-right-color: var(--tooltip-background);
  left: -4px;
  top: calc(100% - var(--uitk-size-sharktooth-height));
}

/* Styles applied when status = "info" */
.uitkTooltip-info {
  --tooltip-status-borderColor: var(--uitk-status-info-borderColor);
  --tooltip-status-icon-color: var(--uitk-status-info-foreground);
}

/* Styles applied when status = "error" */
.uitkTooltip-error {
  --tooltip-status-borderColor: var(--uitk-status-error-borderColor);
  --tooltip-status-icon-color: var(--uitk-status-error-foreground);
}

/* Styles applied when status = "warning" */
.uitkTooltip-warning {
  --tooltip-status-borderColor: var(--uitk-status-warning-borderColor);
  --tooltip-status-icon-color: var(--uitk-status-warning-foreground);
}

/* Styles applied when status = "success" */
.uitkTooltip-success {
  --tooltip-status-borderColor: var(--uitk-status-success-borderColor);
  --tooltip-status-icon-color: var(--uitk-status-success-foreground);
}

